# btch-downloader-py

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  GEMINI.md  README.md  SKILL.md  bulk_test.py  pyproject.toml  test.py
.github/workflows/: pylint.yml
btch_downloader/: __init__.py  downloader.py
tests/: test_downloader.py
venv-twine/: pyvenv.cfg
